; ModuleID = '/home/carl/AnghaBench/linux/fs/efs/extr_namei.c_efs_fh_to_parent.c'
source_filename = "/home/carl/AnghaBench/linux/fs/efs/extr_namei.c_efs_fh_to_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.super_block = type { i32 }
%struct.fid = type { i32 }

@efs_nfs_get_inode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dentry* @efs_fh_to_parent(%struct.super_block* %0, %struct.fid* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.super_block*, align 8
  %6 = alloca %struct.fid*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.super_block* %0, %struct.super_block** %5, align 8
  store %struct.fid* %1, %struct.fid** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.super_block*, %struct.super_block** %5, align 8
  %10 = load %struct.fid*, %struct.fid** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @efs_nfs_get_inode, align 4
  %14 = call %struct.dentry* @generic_fh_to_parent(%struct.super_block* %9, %struct.fid* %10, i32 %11, i32 %12, i32 %13)
  ret %struct.dentry* %14
}

declare dso_local %struct.dentry* @generic_fh_to_parent(%struct.super_block*, %struct.fid*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
